Добавление слайдера отзывов

--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         </div>
         <div class="sliderUpDown">
             <div class="sliderUpDown_block">
-                <img class="arrow_up" src="img/arrow_up.png" alt="arrow_up">
+                <img class="arrow_up" src="img/arrow-up.svg" alt="arrow_up">
                     <ul class="slider_menu">
-                        <li class="slider_item">
-                            <img class="slider_avatar" src="img/Ellipse1.png" alt="avatar">
+                        <li class="slider_item active">
+                            <img class="slider_avatar" src="img/Feedback/Ellipse1.png" alt="avatar">
                             <figcaption>
                                 <h3>John Doe</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
@@ -203,8 +203,8 @@
                                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                             </figcaption>
                         </li>
-                        <li class="slider_item">
-                            <img class="slider_avatar" src="img/Ellipse2.png" alt="avatar">
+                        <li class="slider_item active">
+                            <img class="slider_avatar" src="img/Feedback/Ellipse2.png" alt="avatar">
                             <figcaption>
                                 <h3>Khalessia</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
@@ -213,7 +213,7 @@
                             </figcaption>
                         </li>
                     </ul>
-                <img class="arrow_down" src="img/arrow_down.png" alt="arrow_down">
+                <img class="arrow_down" src="img/arrow-down.svg" alt="arrow_down">
             </div>
         </div>
     </section>
