--- a/index.html
+++ b/index.html
@@ -188,31 +188,33 @@
             <h2>What our customers
                 have to say about us.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-            <button>Get started</button>
+            <button class="pulse">Get started</button>
         </div>
         <div class="sliderUpDown">
             <div class="sliderUpDown_block">
                 <img class="arrow_up" src="img/arrow-up.svg" alt="arrow_up">
-                    <ul class="slider_menu">
-                        <li class="slider_item active">
-                            <img class="slider_avatar" src="img/Feedback/Ellipse1.png" alt="avatar">
-                            <figcaption>
-                                <h3>John Doe</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
-                            </figcaption>
-                        </li>
-                        <li class="slider_item active">
-                            <img class="slider_avatar" src="img/Feedback/Ellipse2.png" alt="avatar">
-                            <figcaption>
-                                <h3>Khalessia</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
-                            </figcaption>
-                        </li>
-                    </ul>
+                    <div class="conteiner">
+                        <ul class="slider_menu">
+                            <li class="slider_item active">
+                                <img class="slider_avatar" src="img/Feedback/Ellipse1.png" alt="avatar">
+                                <figcaption>
+                                    <h3>John Doe</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                                </figcaption>
+                            </li>
+                            <li class="slider_item active">
+                                <img class="slider_avatar" src="img/Feedback/Ellipse2.png" alt="avatar">
+                                <figcaption>
+                                    <h3>Khalessia</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                                </figcaption>
+                            </li>
+                        </ul>
+                    </div>
                 <img class="arrow_down" src="img/arrow-down.svg" alt="arrow_down">
             </div>
         </div>
@@ -226,27 +228,41 @@
 
     <section class="person_content">
         <div class="person_content_image">
-            <figure>
-                <div>
-                    <img src="img/person/person1.jpg" alt="person2">
+            <figure class="person_box_image">
+                <div class="person_image">
+                    <img src="img/person/person1.jpg" class="img" alt="person2">
                 </div>
             </figure>
-            <figure class="boxShadow">
-                <div class="boxShadowInset">
-                    <img src="img/person/person2.jpg" class="image_active" alt="person2">
+            <figure class="person_box_image">
+                <div class="person_image">
+                   <img src="img/person/person2.jpg" class="img" alt="person2">
                 </div>
             </figure>
-            <figure >
-                <div>
-                    <img src="img/person/person3.jpg" alt="person2">
+            <figure class="person_box_image">
+                <div class="person_image">
+                    <img src="img/person/person3.jpg" class="img" alt="person2">
                 </div>
             </figure>
         </div>
-        <div class="person_content_comment">
-            <h3>Sophie Turner</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
-            sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, 
-            consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+        <div class="persan_comment_list">
+            <div class="person_content_comment">
+                <h3>Viktoriya Braoun</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, 
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+            <div class="person_content_comment">
+                <h3>Sophie Turner</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, 
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            </div>
+            <div class="person_content_comment">
+                <h3>John Smith</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magnaLorem ipsum dolor sit amet, 
+                consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            </div>
         </div>
         <div class="person_content_socialNetwork">
             <img src="img/social/twitter.svg" alt="twitter">
