final adaptive development

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li><a class="menu__item" href="#">Extension</a></li>
                     <li><a class="menu__item" href="#">Pricing</a></li>
                     <li><a class="menu__item" href="#">Help</a></li>
+                    <li><a class="sing_up__item" href="#">sing up</a></li>
                 </ul>
             </div>
         </div>
@@ -234,7 +235,11 @@
                                         <img class="slider_avatar" src="img/Feedback/Ellipse1.png" alt="avatar">
                                     </div>
                                     <figcaption class="figcap">
-                                        <h3>John Doe</h3>
+                                        <h3 class="name_person">John Doe</h3>
+                                        <div class="mob_person">
+                                            <img class="slider_avatar" src="img/Feedback/Ellipse1.png" alt="avatar">
+                                            <h3>John Doe</h3>
+                                        </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
@@ -243,9 +248,15 @@
                             </li>
                             <li class="slider_item active">
                                 <figure>
-                                    <img class="slider_avatar" src="img/Feedback/Ellipse2.png" alt="avatar">
+                                    <div class="box__slider_avatar">
+                                        <img class="slider_avatar" src="img/Feedback/Ellipse2.png" alt="avatar">
+                                    </div>
                                     <figcaption class="figcap">
-                                        <h3>John Doe</h3>
+                                        <h3 class="name_person">Khalessia</h3>
+                                        <div class="mob_person">
+                                            <img class="slider_avatar" src="img/Feedback/Ellipse2.png" alt="avatar">
+                                            <h3>Khalessia</h3>
+                                        </div>
                                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
                                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
